--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,22 @@
     overflow-x: clip;
 }
 
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background: #000; 
+    z-index:5;
+}
+
+::-webkit-scrollbar-thumb {
+    background: white;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
+}
+
 /* Reconfigure Font-Awesome Icons */
 
 .fa-brands {
@@ -38,7 +54,8 @@
 
 .section-title {
     color:white;
-    font-size: 2em;
+    font-size: 3em;
+    
 }
 
 /* Reconfigure Bootstap  */
@@ -392,6 +409,18 @@ nav {
     border:0;
 }
 
+.contact {
+    padding:3em;
+}
+
+input {
+    font-size:1em;
+    padding:1em;
+    border-radius:1em;
+}
+
+/* Footer */ 
+
 footer {
     min-height:10vh;
     background:var(--black);
@@ -437,6 +466,11 @@ footer {
 .section-title {
     text-align: center;
 }
+/* Contact */
+form {
+   gap:1em;
+}
+
 
 
 }
